--- a/examples/index.html
+++ b/examples/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="../jquery.1.7.2.min.js"></script>
-    <script src="../jquery.keyJumper.1.0.0.js"></script>
+    <script src="../jquery.2.0.2.min.js"></script>
+    <script src="../jquery.keyJumper.1.1.0.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Examples</title>
     <script type="text/javascript">
         $(function(){
-            $('.selectable').keyNavigator({
+            $('.selectable').keyJumper({
                 navigableClass : 'selectable',
                 onClass : 'selected',
-                offClass : '',
-                areaToScanX : 1500,
-                areaToScanY : 1500
+                offClass : ''
             });
         });
     </script>
@@ -47,16 +45,16 @@
     </div>
     <div class="container example3">
         <h2>Forced navigation</h2>
-        <div class="selectable block21" id="block21" data-keynav-helper="null block23 null null">21</div>
-        <div class="selectable block22" data-keynav-helper="null block24 null null">22</div>
-        <div class="selectable block23" id="block23" data-keynav-helper="null block25 null block21">23</div>
+        <div class="selectable block21" id="block21" data-keynav-helper="null #block23 #block50 null">21</div>
+        <div class="selectable block22" data-keynav-helper="null null null null">22</div>
+        <div class="selectable block23" id="block23" data-keynav-helper="null #block25 null #block21">23</div>
         <div class="selectable block24">24</div>
-        <div class="selectable block25" id="block25" data-keynav-helper="null null null block23">25</div>
-        <div class="selectable block26" data-keynav-helper="null block28 null null">26</div>
+        <div class="selectable block25" id="block25" data-keynav-helper="null null null #block23">25</div>
+        <div class="selectable block26">26</div>
         <div class="selectable block27">27</div>
-        <div class="selectable block28" id="block28" data-keynav-helper="null block30 null null">28</div>
+        <div class="selectable block28" id="block28" data-keynav-helper="null null null .block26">28</div>
         <div class="selectable block29">29</div>
-        <div class="selectable block30" id="block30">30</div>
+        <div class="selectable block30" id="block30" data-keynav-helper="null null null #block28">30</div>
     </div>
 
     <div class="arrows">
