Corrected README content

--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,7 @@
         <div class="selectable block10">10</div>
     </div>
     <div class="container example2">
-        <h2>Spread navigation</h2>
+        <h2>Navigation through sparse nodes</h2>
         <div class="selectable block11">11</div>
         <div class="selectable block12">12</div>
         <div class="selectable block13">13</div>
